# fas3-api-haskell

./: .travis.yml  Fedora-FAS-Client.html  Fedora-FAS-Types-ClientConfig.html  Fedora-FAS-Types-Group.html  Fedora-FAS-Types-Pages.html  Fedora-FAS-Types-Person.html  Fedora-FAS-Types-SearchType.html  Fedora-FAS-Types-UTCTimeFAS.html  Fedora-FAS-Types.html  README.md  doc-index.html  fas3.cabal  fas3.haddock  index-frames.html  index.html  mini_Fedora-FAS-Client.html  mini_Fedora-FAS-Types-ClientConfig.html  mini_Fedora-FAS-Types-Group.html  mini_Fedora-FAS-Types-Pages.html  mini_Fedora-FAS-Types-Person.html  mini_Fedora-FAS-Types-SearchType.html  mini_Fedora-FAS-Types-UTCTimeFAS.html  mini_Fedora-FAS-Types.html
scripts/: deploy-haddock-manually.sh
src/Fedora/FAS/: Client.hs  Lenses.hs  Types.hs
src/Fedora/FAS/Types/: ClientConfig.hs  Group.hs  Pages.hs  Person.hs  SearchType.hs  UTCTimeFAS.hs
