name:                fas3
version:             0.1.0.0
synopsis:            Haskell API bindings for the upcoming Fedora Accounts System v3
-- description:
homepage:            https://github.com/fedora-infra/fas3-api-haskell
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          relrod@redhat.com
copyright:           (c) 2015 Red Hat, Inc.
category:            Fedora, Web
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Fedora.FAS.Client
                   , Fedora.FAS.Types
                   , Fedora.FAS.Types.ClientConfig
                   , Fedora.FAS.Types.Pages
                   , Fedora.FAS.Types.Person
                   , Fedora.FAS.Types.SearchType
                   , Fedora.FAS.Types.UTCTimeFAS
  -- other-modules:
  -- other-extensions:
  build-depends:       aeson >= 0.7 && < 0.9
                     , base >= 4 && < 5
                     , bytestring >= 0.10 && < 0.12
                     , http-client >= 0.3 && < 0.5
                     , http-types >= 0.8 && < 0.9
                     , lens >= 4.5 && < 4.8
                     , old-locale >= 1 && < 2
                     , text >= 1 && < 2
                     , time >= 1.2 && < 2
                     , wreq >= 0.3 && < 0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
